Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -3,10 +3,10 @@
 ## Rest of variable can be setup using BOT by /bsetting command
 
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-OWNER_ID = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
+BOT_TOKEN = "6074072140:AAEz1NuXR_PP8bqxhuVdxW7PzTF3ZJJxXNc"                              # Require restart after changing it while bot running
+OWNER_ID = "1989750989"                               # Require restart after changing it while bot running
+TELEGRAM_API = "9016072"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "7102a41623c9bc2feaff6c8455680c42"
 
 # OPTIONAL CONFIG
 GDRIVE_ID = ""
